Add default body styling

--- a/src/nap.scss
+++ b/src/nap.scss
@@ -1,7 +1,15 @@
 @charset 'UTF-8';
+@use "_variables";
 
 *::before,
 *::after,
 * {
   box-sizing: border-box;
+}
+
+body {
+  font-family: variables.$font--default;
+  font-size: 10px;
+  margin: 0;
+  padding: 0;
 }
