--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
 // Font stacks
-$font--default: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+$font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
   Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-$font--monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+$font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
   "Courier New", monospace;
