--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,3 +5,6 @@ $font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
   Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 $font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
   "Courier New", monospace;
+
+$font-size-default: 10px;
+
